--- a/about.html
+++ b/about.html
@@ -74,41 +74,59 @@
         </div>
 
     </div>
+<a id="next1"></a>
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #849ea3;">
+      <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
-    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/privacy.jpg');">
-<a id = "next1"></a>
-        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
-          <h1><strong>Privacy</strong></h1>
-          <article class="uk-comment">
-              <header class="uk-comment-header">
-                  <img class="uk-comment-avatar" src="" alt="">
-                  <h4 class="uk-comment-title">We believe that privacy is a human right. We never sell your information.</h4>
-                  <a class="uk-button uk-button-text" href="#next2" uk-scroll>Next</a>
+        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
+          <center widith="95%">
+            <img width="65%" src="./img/data.png" alt="Person standing next to data points illustration | Sourced from undraw.co">
+            <h2> <strong>Privacy Oriented</strong> </h2>
+            <p>We believe that privacy is a right that should not be infringed.</p>
 
-                  <ul class="uk-comment-meta uk-subnav"></ul>
-              </header>
 
-          </article>
+          </center>
+
+        <a class="uk-button uk-button-text" href="#next2" uk-scroll>Next</a>
+
         </div>
-
     </div>
 
+    <a id="next2"></a>
+        <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #3d566e;">
+          <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
-    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/media.jpg');">
-<a id = "next2"></a>
-        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
-          <h1><strong>Media</strong></h1>
-          <article class="uk-comment">
-              <header class="uk-comment-header">
-                  <img class="uk-comment-avatar" src="" alt="">
-                  <h4 class="uk-comment-title">We make family-friendly content while mixing old and new techniques.</h4>
-                  <ul class="uk-comment-meta uk-subnav"></ul>
-              </header>
+            <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
+              <center widith="95%">
+                <img width="65%" src="./img/media.png" alt="Video files illustration | Sourced from undraw.co">
+                <h2> <strong>Quality Media</strong> </h2>
+                <p>We specialize in short-films and promotional content.</p>
 
-          </article>
+
+              </center>
+
+            <a class="uk-button uk-button-text" href="#next3" uk-scroll>Next</a>
+
+            </div>
         </div>
 
-    </div>
+        <a id="next3"></a>
+            <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #849ea3;">
+              <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
+
+                <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
+                  <center widith="95%">
+                    <img width="65%" src="./img/thinking.png" alt="Software development illustration | Sourced from undraw.co">
+                    <h2> <strong>Innovative Software</strong> </h2>
+                    <p>We develop productive and entertainment software designed for the web.</p>
+
+
+                  </center>
+
+
+
+                </div>
+            </div>
 
 
   </body>
