--- a/dashboard.html
+++ b/dashboard.html
@@ -55,10 +55,28 @@
 </header>
 
 
-  <body style="margin-top: 50px;">
+  <body style="margin-top: 0px;">
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #849ea3;">
+      <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
+
+        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
+          <center widith="95%">
+            <img width="65%" src="./img/datagroups.png" alt="Video files illustration | Sourced from undraw.co">
+            <h1> <strong>Marketing Dashboard</strong> </h1>
+
+
+          </center>
+
+
+
+        </div>
+    </div>
+
+
+
 <div style="margin: 10px;">
 
-  <h1><strong>Marketing Dashboard</strong></h1>
+  <!--<h1><strong>Marketing Dashboard</strong></h1>-->
   <table class="uk-table" width="90%">
       <caption>View Data</caption>
       <thead>
