--- a/fruity.html
+++ b/fruity.html
@@ -82,50 +82,79 @@
     <a id = "next1"></a>
 
 
-    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #849ea3;">
+
+
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #512696;">
       <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
-        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h2><strong>What is Fruity?</strong></h2>
-<p>Fruity is a minimalist web browser designed for shared devices</p>
-<!-- This is a button toggling the modal -->
-<p><button uk-toggle="target: #my-id" class="uk-button uk-button-secondary" type="button">Download</button></p>
 
-<!-- This is the modal -->
-<div id="my-id" uk-modal>
-    <div class="uk-modal-dialog uk-modal-body">
-        <h2 class="uk-modal-title">Hi! Thanks for downloading!</h2>
-        <p>Please read the terms and conditions before use. By downloading Fruity, you automatically agree to the terms, conditions, and privacy policy.</p>
-        <a href="https://borg-creative-studios.github.io/fruity-website/assets/files/Terms-andConditions-Fruity.pdf" target="_blank"><button class="uk-button uk-button-secondary" name="button">Read the terms</button></a><a href="https://www.borgcreative.com/fruity/Fruity.dmg" download><button class="uk-button uk-button-secondary" name="button">Download</button></a>
-        <button class="uk-modal-close" type="button"></button>
-    </div>
-</div>
+          <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
+            <center width="95%">
+              <h2><strong>What is Fruity?</strong></h2>
+              <p>Fruity is a minimalist web browser designed for shared devices</p>
+              <!-- This is a button toggling the modal -->
+              <p><button uk-toggle="target: #my-id" class="uk-button uk-button-secondary" type="button">Download</button></p>
 
-
-        <a class="uk-button uk-button-text" href="#next2" uk-scroll>Learn more</a>
+              <!-- This is the modal -->
+              <div id="my-id" uk-modal>
+              <div class="uk-modal-dialog uk-modal-body">
+              <h2 class="uk-modal-title">Hi! Thanks for downloading!</h2>
+              <p>Please read the terms and conditions before use. By downloading Fruity, you automatically agree to the terms, conditions, and privacy policy.</p>
+              <a href="https://borg-creative-studios.github.io/fruity-website/assets/files/Terms-andConditions-Fruity.pdf" target="_blank"><button class="uk-button uk-button-secondary" name="button">Read the terms</button></a><a href="https://www.borgcreative.com/fruity/Fruity.dmg" download><button class="uk-button uk-button-secondary" name="button">Download</button></a>
+              <button class="uk-modal-close" type="button"></button>
+              </div>  </center>
+        <a class="uk-button uk-button-text" href="#next2" uk-scroll>Learn More</a>
 
         </div>
     </div>
+    <a id = "next2"></a>
 
-<a id = "next2"></a>
-<div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #3d566e;">
-  <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
-
-    <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h2><strong>Top features</strong></h2>
-<img src="./img/hard-drive.svg" alt="">
-<p>Fruity is built to run smoothly and efficiantly on MacOS 10.12 and newer.</p>
-
-<img src="./img/image.svg" alt="">
-<p>Fruity has light-weight media viewers built-in.</p>
-
-<img src="./img/privacy.svg" alt="">
-<p>Fruity features a "Delete all" button to delete the cache and cookies! This featue also auto delete your cache and cookies when closing the app.</p>
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #795548;">
+      <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
 
+          <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
+            <center width="95%">
+              <img width="65%" src="./img/computer.png" alt="Person with computer illustration | Sourced from undraw.co">
+              <h2> <strong>Designed for MacOS.</strong> </h2>
+              <p>The Fruity Web Browser is designed to run smoothly on computers running MacOS 10.12 or newer.</p>
+            </center>
+        <a class="uk-button uk-button-text" href="#next3" uk-scroll>Next</a>
 
-
-
+        </div>
     </div>
-</div>
+    <a id = "next3"></a>
+
+
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #512696;">
+      <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
+
+
+          <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
+            <center width="95%">
+              <img width="65%" src="./img/images.png" alt="Images illustration | Sourced from undraw.co">
+              <h2> <strong>Media viewers built-in.</strong> </h2>
+              <p>Fruity has light-weight media viewers built-in.</p>
+            </center>
+        <a class="uk-button uk-button-text" href="#next4" uk-scroll>Next</a>
+
+        </div>
+    </div>
+    <a id = "next4"></a>
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #795548;">
+      <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
+
+
+          <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
+            <center width="95%">
+              <img width="65%" src="./img/info.png" alt="Person with data illustration | Sourced from undraw.co">
+              <h2> <strong>Built for privacy.</strong> </h2>
+              <p>Fruity features a "Delete all" button to delete the cache and cookies! This featue also auto delete your cache and cookies when closing the app.</p>
+            </center>
+
+
+        </div>
+    </div>
 
 
 
