--- a/page12.html
+++ b/page12.html
@@ -131,8 +131,24 @@
     </div>
     <a id = "next3"></a>
 
-
     <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #849ea3;">
+      <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
+
+
+          <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
+            <center width="95%">
+              <img width="65%" src="./img/trends.png" alt="Data with person illustration | Sourced from undraw.co">
+              <h2> <strong>Is there marketing by trends?</strong> </h2>
+              <p>Marketing by trends works by targeting topics based on ad content and website content.</p>
+            </center>
+        <a class="uk-button uk-button-text" href="#next4" uk-scroll>Next</a>
+
+        </div>
+    </div>
+    <a id = "next4"></a>
+
+
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #3d566e;">
       <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
@@ -154,7 +170,7 @@
             </div>
           </center>
 
-        <a class="uk-button uk-button-text" href="#next4" uk-scroll>Next</a>
+        <a class="uk-button uk-button-text" href="#next5" uk-scroll>Next</a>
 
         </div>
     </div>
@@ -162,7 +178,7 @@
 
 
 
-<a id = "next4"></a>
+<a id = "next5"></a>
 <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/deals-meta.jpg');">
 
     <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
