--- a/bct/mk2-bar-3.html
+++ b/bct/mk2-bar-3.html
@@ -22,7 +22,7 @@
           </div>
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>BCS Marketing</span></h5>
-            <p>Buy an ad today!</p>
+            <p>Buy an ad today for just $10!</p>
             <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
           </div>
