--- a/bct/mk2-bar-4.html
+++ b/bct/mk2-bar-4.html
@@ -21,7 +21,7 @@
           </div>
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>BCS Marketing</span></h5>
-            <p>Buy an ad today!</p>
+            <p>Buy an ad today for just $10!</p>
             <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
           </div>
@@ -33,9 +33,9 @@
               <a href="https://www.coffeewithjake.com/" target="_blank" class="uk-link-muted"><img src="https://www.borgcreative.com/bct/cwjad.jpg" alt="CoffeeWithJake Blog"></a>
           </div>
           <div class="uk-card-body">
-            <h5 class="uk-heading-line"><span>CoffeeWithJake</span></h5>
-            <p>Let's chat about current issues over coffee.</p>
-            <a href="https://www.coffeewithjake.com/" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
+            <h5 class="uk-heading-line"><span>BCS Author</span></h5>
+            <p>A new, browser-based writing app.</p>
+            <a href="https://mlink.borgcreative.com/author.html" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
           </div>
       </div>
