--- a/dashboard.html
+++ b/dashboard.html
@@ -89,8 +89,8 @@
 
       <tbody>
           <tr>
-              <td>319</td>
-              <td>0</td>
+              <td>574</td>
+              <td>574</td>
               <td>1444</td>
           </tr>
       </tbody>
@@ -101,7 +101,7 @@
 
     <center><embed src="./chartt.html" width="100%" height="350px"></center>
       <center> <p><a class="uk-button uk-button-secondary" href="./chartt-2020.html" target="_blank">View 2020's data</a></p> </center>
-<center><p><a class="uk-button uk-button-secondary" href="https://airtable.com/shr2U9YDg30zOnthS/tblTq8exUnoJ33S1w" target="_blank">View site gallery</a></p></center>
+<!--<center><p><a class="uk-button uk-button-secondary" href="https://airtable.com/shr2U9YDg30zOnthS/tblTq8exUnoJ33S1w" target="_blank">View site gallery</a></p></center>-->
 
 
   <a id = "next1"></a>
