updated link page

--- a/links.html
+++ b/links.html
@@ -65,17 +65,19 @@
 
 
   <body>
-    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" style="background-image: url('img/bcs-cover.jpg');">
+    <div name="header" class=" uk-height-viewport uk-background-cover uk-light uk-flex" style="background-image: url('img/bcs-cover.jpg');">
 
-        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1>Links</h1>
-          <p><a class="uk-button uk-button-secondary" href="https://www.borgcreative.com/">Home</a></p>
-          <p><a class="uk-button uk-button-secondary" href="https://borgcreative.substack.com/">News letter</a></p>
-          <p><a class="uk-button uk-button-secondary" href="https://twitter.com/borgcreative">Twitter</a></p>
-          <p><a class="uk-button uk-button-secondary" href="https://www.instagram.com/borgcreativestudios/">Instagram</a></p>
-          <p><a class="uk-button uk-button-secondary" href="https://www.linkedin.com/company/borg-creative-studios-llc/">LinkedIn</a></p>
-          <p><a class="uk-button uk-button-secondary" href="https://www.facebook.com/Borg-Creative-Studios/">Facebook</a></p>
-          <p><a class="uk-button uk-button-secondary" href="https://www.pinterest.com/borgcreative/">Pinterest</a></p>
+        <div class="uk-align-center uk-column-1-2@m  uk-text-center uk-margin-auto uk-margin-auto-vertical">
+          <center class="uk-align-center">
+          <!--<p><a class="uk-button uk-button-secondary" href="https://borgcreative.substack.com/">News letter</a></p>-->
+          <p width="300mm" style="padding: 0px; border: none; border-radius: 5mm;"><a width="300mm" style="padding: 0px; border: none; border-radius: 5mm;" class="uk-button uk-button-secondary" href="https://www.borgcreative.com/"> <img width="300mm" style="padding: 0px; border: none; border-radius: 5mm;" src="./img/computer.jpg" alt="Home page"> </a></p>
+          <p width="300mm" style="padding: 0px; border: none; border-radius: 5mm;"><a width="300mm" style="padding: 0px; border: none; border-radius: 5mm;" class="uk-button uk-button-secondary" href="https://twitter.com/borgcreative"> <img width="300mm" style="padding: 0px; border: none; border-radius: 5mm;" src="./img/twitter.jpg" alt="Twitter link"> </a></p>
+          <p width="300mm" style="padding: 0px; border: none; border-radius: 5mm;"><a width="300mm" style="padding: 0px; border: none; border-radius: 5mm;" class="uk-button uk-button-secondary" href="https://www.instagram.com/borgcreativestudios/"> <img width="300mm" style="padding: 0px; border: none; border-radius: 5mm;" src="./img/instagram.jpg" alt="Instagram link"> </a></p>
+          <p width="300mm" style="padding: 0px; border: none; border-radius: 5mm;"><a width="300mm" style="padding: 0px; border: none; border-radius: 5mm;" class="uk-button uk-button-secondary" href="https://www.linkedin.com/company/borg-creative-studios-llc/"> <img width="300mm" style="padding: 0px; border: none; border-radius: 5mm;" src="./img/linkedin.jpg" alt="LinkedIn link"> </a></p>
+          <p width="300mm" style="padding: 0px; border: none; border-radius: 5mm;"><a width="300mm" style="padding: 0px; border: none; border-radius: 5mm;" class="uk-button uk-button-secondary" href="https://www.tiktok.com/@borgcreativestudios?lang=en"> <img width="300mm" style="padding: 0px; border: none; border-radius: 5mm;" src="./img/tiktok.jpg" alt="tiktok link"> </a></p>
+          <p width="300mm" style="padding: 0px; border: none; border-radius: 5mm;"><a width="300mm" style="padding: 0px; border: none; border-radius: 5mm;" class="uk-button uk-button-secondary" href="https://wa.me/message/H75ZMM3UGODAL1"> <img width="300mm" style="padding: 0px; border: none; border-radius: 5mm;" src="./img/whatsapp.jpg" alt="WhatsApp link"> </a></p>
 
+        </center>
         </div>
 
     </div>
