--- a/links.html
+++ b/links.html
@@ -65,7 +65,7 @@
 
 
   <body>
-    <div name="header" class=" uk-height-viewport uk-background-cover uk-light uk-flex" style="background-image: url('img/bcs-cover.jpg');">
+    <div name="header" class=" uk-height-viewport uk-background-cover uk-light uk-flex" style="background-image: url('img/bcs-cover.jpg'); padding-top:10mm">
 
         <div class="uk-align-center uk-column-1-2@m  uk-text-center uk-margin-auto uk-margin-auto-vertical">
           <center class="uk-align-center">
