--- a/links.html
+++ b/links.html
@@ -33,7 +33,7 @@
   <title>Links</title>
 </head>
 <header>
-  <div class="uk-inline" style="position: fixed; top: 0px; left: 0px;">
+<!--  <div class="uk-inline" style="position: fixed; top: 0px; left: 0px;">
       <a href="./index.html"><button class="uk-button uk-button-secondary" type="button">Home</button></a>
 
       <button class="uk-button uk-button-secondary" type="button" >Menu</button>
@@ -58,7 +58,7 @@
 
       </div>
 
-  </div>
+  </div>-->
 
 
 </header>
