--- a/card/tgkw.html
+++ b/card/tgkw.html
@@ -86,7 +86,7 @@
       <p>Let me assist you in finding your dream home or selling your existing home!</p>
       <p style="color:black" class="uk-text-meta">Phone: #</p>
       <p style="color:black" class="uk-text-meta">Email: #</p>
-      <p><a style="color:black" href="http://TifanyGeorge.com">Keller Williams</a></p>
+      <p><a style="color:black" href="http://TifanyGeorge.com">Website</a></p>
       </div>
     <div class="uk-card-footer">
       <p> <a href="https://www.facebook.com/greatAVhomes" target="_blank"><img src="./icons/facebook.svg" alt="Facebook link"></a> <a href="https://www.instagram.com/tifanygeorgekw/" target="_blank"><img src="./icons/instagram.svg" alt="Instagram link"></a></p>
