--- a/card/tgkw.html
+++ b/card/tgkw.html
@@ -71,7 +71,7 @@
           <center class="uk-align-center">
             <img src="./icons/tgkw2.PNG" width="250mm" alt="Tifany George logo">
           <!--<p><a class="uk-button uk-button-secondary" href="https://borgcreative.substack.com/">News letter</a></p>-->
-          <h1 style="color: black;">Delivering Successful Results</h1>
+          <h1 style="color: black; text-shadow: 0px 0px 5px #fff;">Delivering Successful Results</h1>
           <div class="uk-card uk-card-default uk-width-1-2@m">
     <div class="uk-card-header">
         <div class="uk-grid-small uk-flex-middle" uk-grid>
