--- a/card/tgkw.html
+++ b/card/tgkw.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
   <link rel="shortcut icon" href="./icons/tgkw.PNG">
+  <meta name="robots" content="noindex">
 
   <!-- Compressed CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
@@ -84,8 +85,8 @@
     </div>
     <div class="uk-card-body">
       <p>Let me assist you in finding your dream home or selling your existing home!</p>
-      <p style="color:black" class="uk-text-meta">Phone: #</p>
-      <p style="color:black" class="uk-text-meta">Email: #</p>
+      <p style="color:black" class="uk-text-meta">Phone: 661-528-9910</p>
+      <p style="color:black" class="uk-text-meta">Email: Tifany.George@kw.com</p>
       <p><a style="color:black" href="https://www.borgcreative.com/card/vcard/GeorgeTifany.vcf" target="_blank">Download Contact</a></p>
       <p><a style="color:black" href="http://TifanyGeorge.com">Website</a></p>
       </div>
