--- a/card/tgkw.html
+++ b/card/tgkw.html
@@ -85,8 +85,8 @@
     </div>
     <div class="uk-card-body">
       <p>Let me assist you in finding your dream home or selling your existing home!</p>
-      <p style="color:black" class="uk-text-meta">661 528 9910</p>
-      <p style="color:black" class="uk-text-meta">Tifany.George@kw.com</p>
+      <p style="color:black" class="uk-text-meta"><a href="tel:661-528-9910">Phone: 661 528 9910</a></p>
+      <p style="color:black" class="uk-text-meta"><a href="mailto:Tifany.George@kw.com">Email: Tifany.George@kw.com</a></p>
       <p><a style="color:black" href="http://TifanyGeorge.com">Website</a></p>
       <p><a style="color:black" href="https://www.borgcreative.com/card/vcard/GeorgeTifany.vcf" target="_blank">Download Contact</a></p>
       </div>
