--- a/card/tgkw.html
+++ b/card/tgkw.html
@@ -5,6 +5,13 @@
   <link rel="shortcut icon" href="./icons/tgkw.PNG">
   <meta name="robots" content="noindex">
 
+  <!-- Panelbear Analytics - We respect your privacy -->
+<script async src="https://cdn.panelbear.com/analytics.js?site=CUrntGcYrd5"></script>
+<script>
+    window.panelbear = window.panelbear || function() { (window.panelbear.q = window.panelbear.q || []).push(arguments); };
+    panelbear('config', { site: 'CUrntGcYrd5' });
+</script>
+
   <!-- Compressed CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
 
