--- a/bcs-card.html
+++ b/bcs-card.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<head>
-  <link rel="shortcut icon" href="./img/bcs-logo.PNG">
+  <head>
+    <link rel="shortcut icon" href="./img/bcs-logo.PNG">
 
-  <!-- Compressed CSS -->
+    <!-- Compressed CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
 
 <!-- Compressed JavaScript -->
@@ -18,9 +18,37 @@
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.1/dist/js/uikit-icons.min.js"></script>
 
 
-  <meta charset="utf-8">
-  <title>Marketing Dashboard</title>
-</head>
+<meta property="og:title" content="Borg Creative Studios">
+<meta property="og:description" content="Share your contact information with ease!">
+<meta property="og:image" content="https://www.borgcreative.com/img/code.jpg">
+<meta property="og:url" content="https://www.borgcreative.com/bcs-card.html">
+
+<meta property="twitter:title" content="Borg Creative Studios">
+<meta property="twitter:description" content="Share your contact information with ease!">
+<meta property="twitter:image" content="https://www.borgcreative.com/img/code.jpg">
+
+<meta property="twitter:url" content="https://www.borgcreative.com/bcs-card.html">
+<meta name="description" content="Share your contact information with ease!">
+<meta name="keywords" content="marketing, privacy, privacy oriented, digital marketing, marketing platform">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+<meta name="revisit-after" content="30 days">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Software App",
+  "name": "BCS Card",
+  "image": "https://www.borgcreative.com/img/bcs.png",
+  "description": "Share your contact information with ease!",
+  "brand": "Borg Creative Studios"
+}
+</script>
+
+    <title>BCS Card</title>
+  </head>
+
 <header>
   <div class="uk-inline" style="position: fixed; top: 0px; left: 0px;">
       <a href="./index.html"><button class="uk-button uk-button-secondary" type="button">Home</button></a>
@@ -56,7 +84,7 @@
 </header>
 
 
-  <body style="margin-top: 0px;">
+  <body>
     <script>
   function initFreshChat() {
     window.fcWidget.init({
@@ -66,60 +94,79 @@
   }
   function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
 </script>
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/bcs-cover.jpg');">
+
+        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+          <img src="./img/bcs.png" width="40%" alt="">
+          <h1><strong>BCS Card</strong></h1>
+          <p><a class="uk-button uk-button-secondary" href="https://airtable.com/shrkpDCl7O60tSOxz" target="_blank">Get started</a><a class="uk-button uk-button-secondary" href="./accounts.html">Accounts</a></p>
+          <a class="uk-button uk-button-text" href="#next1" uk-scroll>Learn more</a>
+        </div>
+
+    </div>
+    <a id = "next1"></a>
+
+
     <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #849ea3;">
       <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
-          <center widith="95%">
-            <img width="65%" src="./img/datagroups.png" alt="Video files illustration | Sourced from undraw.co">
-            <h1> <strong>Marketing Dashboard</strong> </h1>
-
-
+          <center width="95%">
+            <img width="65%" src="./img/share.png" alt="Sharing illustration | Sourced from undraw.co">
+            <h2> <strong>How easy is it to share my BCS Card?</strong> </h2>
+            <p>BCS Cards can be shared with the scan of a code or on social media.*</p>
+            <p>*Dependent on type of card purchased</p>
           </center>
 
-
+        <a class="uk-button uk-button-text" href="#next2" uk-scroll>Next</a>
 
         </div>
     </div>
 
+  <a id = "next2"></a>
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #3d566e;">
+      <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
 
-<div style="margin: 10px;">
+          <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
+            <center width="95%">
+              <img width="65%" src="./img/connect.png" alt="People sharing digital content illustration | Sourced from undraw.co">
+              <h2> <strong>Can other people share my card?</strong> </h2>
+              <p>Yes! Your card can be sent to people, printed on flyers, or anything else!</p>
+            </center>
+        <a class="uk-button uk-button-text" href="#next3" uk-scroll>Next</a>
 
-  <!--<h1><strong>Marketing Dashboard</strong></h1>-->
-  <table class="uk-table" width="90%">
-      <caption>View Data</caption>
-      <thead>
-          <tr>
-              <th>Last Week</th>
-              <th>This Month</th>
-              <th>Last Month</th>
-          </tr>
-      </thead>
+        </div>
+    </div>
+    <a id = "next3"></a>
 
-      <tbody>
-          <tr>
-              <td>425</td>
-              <td>1448</td>
-              <td>1444</td>
-          </tr>
-      </tbody>
-  </table>
-  <center><embed src="./chartb.html" width="100%" height="350px"></center>
-  <center><embed src="./chartm.html" width="100%" height="350px"></center>
-<center> <p><a class="uk-button uk-button-secondary" href="./chartm-2020.html" target="_blank">View 2020's data</a></p> </center>
-
-    <center><embed src="./chartt.html" width="100%" height="350px"></center>
-      <center> <p><a class="uk-button uk-button-secondary" href="./chartt-2020.html" target="_blank">View 2020's data</a></p> </center>
-<!--<center><p><a class="uk-button uk-button-secondary" href="https://airtable.com/shr2U9YDg30zOnthS/tblTq8exUnoJ33S1w" target="_blank">View site gallery</a></p></center>-->
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #849ea3;">
+      <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
 
-  <a id = "next1"></a>
+          <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
+            <center width="95%">
+              <img width="65%" src="./img/data.png" alt="Data with person illustration | Sourced from undraw.co">
+              <h2> <strong>What about privacy?</strong> </h2>
+              <p>BCS Cards collect minimal view data and never collect IP addresses. The data collected is never sold.</p>
+            </center>
+        <a class="uk-button uk-button-text" href="https://airtable.com/shrkpDCl7O60tSOxz" target="_blank" uk-scroll>Let's get started!</a>
 
-</div>
+        </div>
+    </div>
+    <a id = "next4"></a>
+
+
+
+
+<a id = "next5"></a>
+
+
 
 
   </body>
+
+
   <footer>
 
 
@@ -146,4 +193,7 @@
 
     </div>
   </footer>
+
+
+
 </html>
