--- a/bcs-card.html
+++ b/bcs-card.html
@@ -100,7 +100,7 @@
           <img src="./img/bcs.png" width="40%" alt="">
           <h1><strong>BCS Card</strong></h1>
           <p><a class="uk-button uk-button-secondary" href="https://airtable.com/shrkpDCl7O60tSOxz" target="_blank">Get started</a><a class="uk-button uk-button-secondary" href="./accounts.html">Accounts</a></p>
-          <a class="uk-button uk-button-text" href="#next1" uk-scroll>Learn more</a>
+
         </div>
 
     </div>
@@ -118,7 +118,7 @@
             <p>*Dependent on type of card purchased</p>
           </center>
 
-        <a class="uk-button uk-button-text" href="#next2" uk-scroll>Next</a>
+
 
         </div>
     </div>
@@ -134,7 +134,7 @@
               <h2> <strong>Can other people share my card?</strong> </h2>
               <p>Yes! Your card can be sent to people, printed on flyers, or anything else!</p>
             </center>
-        <a class="uk-button uk-button-text" href="#next3" uk-scroll>Next</a>
+        <!-- <a class="uk-button uk-button-text" href="#next3" uk-scroll>Next</a> -->
 
         </div>
     </div>
@@ -150,16 +150,11 @@
               <h2> <strong>What about privacy?</strong> </h2>
               <p>BCS Cards collect minimal view data and never collect IP addresses. The data collected is never sold.</p>
             </center>
-        <a class="uk-button uk-button-text" href="https://airtable.com/shrkpDCl7O60tSOxz" target="_blank" uk-scroll>Let's get started!</a>
+        <a class="uk-button uk-button-text" href="https://airtable.com/shrkpDCl7O60tSOxz" target="_blank">Let's get started!</a>
 
         </div>
     </div>
-    <a id = "next4"></a>
 
-
-
-
-<a id = "next5"></a>
 
 
 
