--- a/bcs-card.html
+++ b/bcs-card.html
@@ -20,12 +20,12 @@
 
 <meta property="og:title" content="Borg Creative Studios">
 <meta property="og:description" content="Share your contact information with ease!">
-<meta property="og:image" content="https://www.borgcreative.com/img/code.jpg">
+<meta property="og:image" content="https://www.borgcreative.com/img/bcs-card.jpg">
 <meta property="og:url" content="https://www.borgcreative.com/bcs-card.html">
 
 <meta property="twitter:title" content="Borg Creative Studios">
 <meta property="twitter:description" content="Share your contact information with ease!">
-<meta property="twitter:image" content="https://www.borgcreative.com/img/code.jpg">
+<meta property="twitter:image" content="https://www.borgcreative.com/img/bcs-card.jpg">
 
 <meta property="twitter:url" content="https://www.borgcreative.com/bcs-card.html">
 <meta name="description" content="Share your contact information with ease!">
