--- a/bcs-card.html
+++ b/bcs-card.html
@@ -113,8 +113,8 @@
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
           <center width="95%">
             <img width="65%" src="./img/share.png" alt="Sharing illustration | Sourced from undraw.co">
-            <h2> <strong>How easy is it to share my BCS Card?</strong> </h2>
-            <p>BCS Cards can be shared with the scan of a code or on social media.*</p>
+            <h2> <strong>What is a BCS Card?</strong> </h2>
+            <p>BCS Cards are shareable business cards that can be shared via QR code or link.*</p>
             <p>*Dependent on type of card purchased</p>
           </center>
 
@@ -131,8 +131,9 @@
           <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
             <center width="95%">
               <img width="65%" src="./img/connect.png" alt="People sharing digital content illustration | Sourced from undraw.co">
-              <h2> <strong>Can other people share my card?</strong> </h2>
-              <p>Yes! Your card can be sent to people, printed on flyers, or anything else!</p>
+              <h2> <strong>How easy is it to share my BCS Card?</strong> </h2>
+              <p>BCS Cards can be shared with the scan of a code or on social media.*</p>
+              <p>*Dependent on type of card purchased</p>
             </center>
         <!-- <a class="uk-button uk-button-text" href="#next3" uk-scroll>Next</a> -->
 
