--- a/bcs-card.html
+++ b/bcs-card.html
@@ -131,8 +131,8 @@
           <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
             <center width="95%">
               <img width="65%" src="./img/connect.png" alt="People sharing digital content illustration | Sourced from undraw.co">
-              <h2> <strong>How easy is it to share my BCS Card?</strong> </h2>
-              <p>BCS Cards can be shared with the scan of a code or on social media.*</p>
+              <h2> <strong>Who can share my BCS Card?</strong> </h2>
+              <p>Anyone with the QR code or link can share your card!*</p>
               <p>*Dependent on type of card purchased</p>
             </center>
         <!-- <a class="uk-button uk-button-text" href="#next3" uk-scroll>Next</a> -->
